// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AppleButton > Snapshot Tests > matches snapshot for all sizes 1`] = `
<div>
  <div>
    <button
      class="inline-flex items-center justify-center whitespace-nowrap font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:ring-[3px] focus-visible:ring-offset-0 bg-primary text-primary-foreground shadow-sm hover:shadow-md focus-visible:ring-primary/30 active:shadow-sm h-8 rounded-lg gap-1.5 px-3 text-sm has-[>svg]:px-2.5"
      data-slot="button"
      tabindex="0"
    >
      Small
    </button>
    <button
      class="inline-flex items-center justify-center whitespace-nowrap font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:ring-[3px] focus-visible:ring-offset-0 bg-primary text-primary-foreground shadow-sm hover:shadow-md focus-visible:ring-primary/30 active:shadow-sm h-10 rounded-xl gap-2 px-4 text-sm has-[>svg]:px-3"
      data-slot="button"
      tabindex="0"
    >
      Default
    </button>
    <button
      class="inline-flex items-center justify-center whitespace-nowrap font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:ring-[3px] focus-visible:ring-offset-0 bg-primary text-primary-foreground shadow-sm hover:shadow-md focus-visible:ring-primary/30 active:shadow-sm h-12 rounded-xl gap-2 px-6 text-base has-[>svg]:px-4"
      data-slot="button"
      tabindex="0"
    >
      Large
    </button>
    <button
      class="inline-flex items-center justify-center gap-2 whitespace-nowrap font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:ring-[3px] focus-visible:ring-offset-0 bg-primary text-primary-foreground shadow-sm hover:shadow-md focus-visible:ring-primary/30 active:shadow-sm size-10 rounded-xl"
      data-slot="button"
      tabindex="0"
    >
      +
    </button>
    <button
      class="inline-flex items-center justify-center gap-2 whitespace-nowrap font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:ring-[3px] focus-visible:ring-offset-0 bg-primary text-primary-foreground shadow-sm hover:shadow-md focus-visible:ring-primary/30 active:shadow-sm size-8 rounded-lg"
      data-slot="button"
      tabindex="0"
    >
      +
    </button>
    <button
      class="inline-flex items-center justify-center gap-2 whitespace-nowrap font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:ring-[3px] focus-visible:ring-offset-0 bg-primary text-primary-foreground shadow-sm hover:shadow-md focus-visible:ring-primary/30 active:shadow-sm size-12 rounded-xl"
      data-slot="button"
      tabindex="0"
    >
      +
    </button>
  </div>
</div>
`;

exports[`AppleButton > Snapshot Tests > matches snapshot for all variants 1`] = `
<div>
  <div>
    <button
      class="inline-flex items-center justify-center whitespace-nowrap font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:ring-[3px] focus-visible:ring-offset-0 bg-primary text-primary-foreground shadow-sm hover:shadow-md focus-visible:ring-primary/30 active:shadow-sm h-10 rounded-xl gap-2 px-4 text-sm has-[>svg]:px-3"
      data-slot="button"
      tabindex="0"
    >
      Primary
    </button>
    <button
      class="inline-flex items-center justify-center whitespace-nowrap font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:ring-[3px] focus-visible:ring-offset-0 bg-secondary text-secondary-foreground shadow-sm hover:shadow-md focus-visible:ring-secondary/30 active:shadow-sm h-10 rounded-xl gap-2 px-4 text-sm has-[>svg]:px-3"
      data-slot="button"
      tabindex="0"
    >
      Secondary
    </button>
    <button
      class="inline-flex items-center justify-center whitespace-nowrap font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:ring-[3px] focus-visible:ring-offset-0 bg-destructive text-white shadow-sm hover:shadow-md focus-visible:ring-destructive/30 active:shadow-sm h-10 rounded-xl gap-2 px-4 text-sm has-[>svg]:px-3"
      data-slot="button"
      tabindex="0"
    >
      Destructive
    </button>
    <button
      class="inline-flex items-center justify-center whitespace-nowrap font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:ring-[3px] focus-visible:ring-offset-0 border border-input bg-background/80 backdrop-blur-sm shadow-xs hover:bg-accent hover:text-accent-foreground focus-visible:ring-primary/20 active:bg-accent/80 h-10 rounded-xl gap-2 px-4 text-sm has-[>svg]:px-3"
      data-slot="button"
      tabindex="0"
    >
      Outline
    </button>
    <button
      class="inline-flex items-center justify-center whitespace-nowrap font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:ring-[3px] focus-visible:ring-offset-0 hover:bg-accent/80 hover:text-accent-foreground focus-visible:ring-primary/20 active:bg-accent h-10 rounded-xl gap-2 px-4 text-sm has-[>svg]:px-3"
      data-slot="button"
      tabindex="0"
    >
      Ghost
    </button>
    <button
      class="inline-flex items-center justify-center whitespace-nowrap font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:ring-[3px] focus-visible:ring-offset-0 text-primary underline-offset-4 hover:underline focus-visible:ring-primary/20 h-10 rounded-xl gap-2 px-4 text-sm has-[>svg]:px-3"
      data-slot="button"
      tabindex="0"
    >
      Link
    </button>
    <button
      class="inline-flex items-center justify-center whitespace-nowrap font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:ring-[3px] focus-visible:ring-offset-0 bg-accent text-accent-foreground shadow-xs hover:shadow-sm focus-visible:ring-accent/30 active:shadow-xs h-10 rounded-xl gap-2 px-4 text-sm has-[>svg]:px-3"
      data-slot="button"
      tabindex="0"
    >
      Filled
    </button>
    <button
      class="inline-flex items-center justify-center whitespace-nowrap font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:ring-[3px] focus-visible:ring-offset-0 bg-primary/10 text-primary hover:bg-primary/20 focus-visible:ring-primary/30 active:bg-primary/15 h-10 rounded-xl gap-2 px-4 text-sm has-[>svg]:px-3"
      data-slot="button"
      tabindex="0"
    >
      Tinted
    </button>
  </div>
</div>
`;

exports[`AppleButton > Snapshot Tests > matches snapshot for disabled state 1`] = `
<div>
  <div>
    <button
      class="inline-flex items-center justify-center whitespace-nowrap font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:ring-[3px] focus-visible:ring-offset-0 bg-primary text-primary-foreground shadow-sm hover:shadow-md focus-visible:ring-primary/30 active:shadow-sm h-10 rounded-xl gap-2 px-4 text-sm has-[>svg]:px-3"
      data-slot="button"
      tabindex="0"
    >
      Normal
    </button>
    <button
      class="inline-flex items-center justify-center whitespace-nowrap font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:ring-[3px] focus-visible:ring-offset-0 bg-primary text-primary-foreground shadow-sm hover:shadow-md focus-visible:ring-primary/30 active:shadow-sm h-10 rounded-xl gap-2 px-4 text-sm has-[>svg]:px-3"
      data-slot="button"
      disabled=""
      tabindex="0"
    >
      Disabled
    </button>
  </div>
</div>
`;

exports[`AppleButton > Snapshot Tests > matches snapshot for primary variant 1`] = `
<div>
  <button
    class="inline-flex items-center justify-center whitespace-nowrap font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:ring-[3px] focus-visible:ring-offset-0 bg-primary text-primary-foreground shadow-sm hover:shadow-md focus-visible:ring-primary/30 active:shadow-sm h-10 rounded-xl gap-2 px-4 text-sm has-[>svg]:px-3"
    data-slot="button"
    tabindex="0"
  >
    Primary
  </button>
</div>
`;
